<resources>
    <string name="app_name">UnivTimeTable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="univ_name">Название университета</string>
    <string name="city_name">Город</string>
    <string name="confirm">Подтвердить</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="email">Почта</string>
    <string name="role">Роль</string>
    <string name="fullName">Фамилия Имя Отчество</string>
    <string name="univ">Университет</string>
    <string name="faculty">Факультет</string>
    <string name="groupNum">Номер группы</string>
    <string name="add_audience">Добавить аудиторию</string>
    <string name="add_group">Добавить группу</string>
    <string name="audience_num">Номер аудитории</string>
    <string name="capacity">Вместимость</string>
    <string name="equipment">Обородувание</string>
    <string name="choose_course">Выбрать курс</string>
    <string name="choose_headman">Выбрать старосту</string>
    <string name="faculty_name">Наименование факультета</string>
    <string name="enter_univ_name">Введите название университета</string>
    <string name="univ_name_string">Название университета</string>
    <string name="univ_city_name_string">Город</string>
    <string name="add">Добавить</string>
    <string name="sort_btn_descr">Сортировка по алфавиту</string>
    <string name="full_name_string">Фамилия И.О</string>
    <string name="city">Город</string>
    <string name="univ_caps_string">ВУЗ</string>
    <string name="sort_by_course_num">Сортировка по номеру курса</string>
    <string name="course_num">Курс:</string>
    <string name="group_num">Группа:</string>
    <string name="headman_name">Староста:</string>
    <string name="amount_of_students">Студентов:</string>
    <string name="download">Скачать</string>
    <string name="class_time">Время занятия</string>
    <string name="subj_name">Название предмета</string>
    <string name="course">№ курс</string>
    <string name="subj_type">Лекция</string>
    <string name="audience_num_short">№ ауд.</string>
    <string name="group_num_short">№ группы</string>
    <string name="date_day_week">DD.MM.YY, день</string>
    <string name="week_type">Тип недели</string>
    <string name="group_list">Список групп</string>
    <string name="subject_name">Название предмета</string>
    <string name="class_form">Форма занятия</string>
    <string name="requests">Заявки</string>
    <string name="hours_per_week">Часов в неделю</string>
    <string name="full_name_view">Фамилия И. О.</string>
</resources>