<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/groupNumberView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="@drawable/prim_color_rect_border"
    app:cardBackgroundColor="@color/lecturerColor"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lectTimeView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/class_time"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subjNameView"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@id/lectTimeView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:maxLines="2"
            android:singleLine="false"
            android:padding="5dp"
            android:ellipsize="end"
            android:text="@string/subj_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/audienceNumView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/audience_num_short"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/classTypeView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/audienceNumView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/subj_type"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subjNameView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/courseNumberView"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:padding="5dp"
                android:text="@string/course"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/lectGroupNumberView"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:padding="5dp"
                android:text="@string/group_num_short"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>