<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="@drawable/lect_color_rect_border"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/studClassTimeView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/class_time"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/studSubjNameView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/studClassTimeView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/subj_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/studClassTypeView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/subj_type"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subjAudNumView"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/studClassTypeView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/audience_num_short"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>