<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius ="10dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/adminsColor"
    android:foreground="@drawable/prim_color_rect_border">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/courseNumView"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/course_num"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/groupNumView"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/group_num"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/headmanNameView"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_below="@id/courseNumView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/headman_name"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/studentsCountView"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/groupNumView"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/amount_of_students"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/editGroupView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_settings" />

        <ImageView
            android:id="@+id/deleteGroupView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_delete" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>