<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="@drawable/prim_color_rect_border"
    app:cardBackgroundColor="@color/adminsColor"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/audienceNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/audience_num_short"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/capacityView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/audienceNumberView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="5dp"
            android:text="Мест: "
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/univLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capacityView"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/facultyView"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:padding="5dp"
                android:text="@string/faculty"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Space
                android:layout_width="130dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/universityView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/univ"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/icAudienceEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_settings" />

        <ImageView
            android:id="@+id/icAudienceDeleteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_delete" />


        <TextView
            android:id="@+id/equipmentsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/univLayout"
            android:padding="5dp"
            android:minLines="2"
            android:text="оборудование"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>