<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.admin_screens.group.CreateGroupPageFragment">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/waveView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />


    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="140dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">

        <LinearLayout
            android:id="@+id/linLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editCourseText"
                style="@style/adminTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_course"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:cardCornerRadius="10dp"
                app:hintTextColor="@color/lecturerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/waveView">

                <AutoCompleteTextView
                    android:id="@+id/editCourseAutoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:popupBackground="#DDEAF6"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/editGroupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rect_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/groupNum"
                android:inputType="number"
                android:padding="16dp"
                android:textSize="24sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCourseText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editHeadmanText"
                style="@style/adminTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/choose_headman"
                android:textColorHint="@color/black"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:cardCornerRadius="10dp"
                app:hintTextColor="@color/lecturerColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editGroupText">

                <AutoCompleteTextView
                    android:id="@+id/editHeadmanAutoCompleteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:popupBackground="#DDEAF6"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/editAmountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rect_border"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/amount_of_students"
                android:inputType="number"
                android:padding="16dp"
                android:textSize="24sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editHeadmanText" />
        </LinearLayout>
    </ScrollView>

    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/confirmCreateGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/admin_bg"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/prevPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <ImageButton
        android:id="@+id/prevPageButton"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/admin_bg"
        android:contentDescription="Go to theprevious page"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mainPageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/mainPageButton"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/admin_bg"
        android:contentDescription="Go to theprevious page"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="@+id/prevPageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/prevPageButton"
        app:layout_constraintTop_toTopOf="@+id/prevPageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>